--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,4 +1,4 @@
-<p class="is-small is-centered">
-  <span class="is-bold">made with love and pride by Chai ♥ <a href="https://github.com/danae/chai-corner">source at github</a></span><br>
-  background by <a href="https://www.spriters-resource.com/custom_edited/pokemongeneration1customs/asset/18380/">JoshR691</a> ♥ badge by <a href="https://bsky.app/profile/flashkirby.bsky.social">Flashkirby</a>
+<p class="is-small is-center-aligned">
+  <span class="is-bold">made with love and pride by Chai<br>
+  background by <a href="https://www.spriters-resource.com/custom_edited/pokemongeneration1customs/asset/18380/">JoshR691</a> / badge by <a href="https://bsky.app/profile/flashkirby.bsky.social">Flashkirby</a> /  emoji by <a href="https://github.com/jdecked/twemoji">Twemoji</a>
 </p>
