--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,3 +1,3 @@
-<h1 class="is-bold is-centered" style="margin-bottom: 12px;">
-  🍵 Chai's cozy corner 🌸 チャイ 🌿
+<h1 class="is-bold is-center-aligned">
+  🌸 Chai's cozy corner 🌿 チャイ 🌸
 </h1>
