--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,19 +1,15 @@
-@import '@csstools/normalize.css/normalize.css/opinionated.css';
+@use '@csstools/normalize.css/normalize.css';
+
+@use 'colors';
+@use 'mixins';
+@use 'helpers';
+@use 'layout';
 
 // Import fonts
 @import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 // Variables
 $font: "Sour Gummy", "Cherry Bomb One", sans-serif;
-
-$background-color: #fad6ff;
-$light-color: #ceaaed;
-$text-color: #494182;
-$link-color: #7864c6;
-$dark-color: #373334;
-
-$tablet: 768px;
-$desktop: 1024px;
 
 
 // Box sizing of all elements
@@ -36,75 +32,29 @@ body {
   font-family: $font;
   font-weight: 400;
   font-style: normal;
-  color: $text-color;
+  color: colors.$text;
 
   // Link styling
   a {
-    color: $link-color;
-    border-bottom: 1px dotted $link-color;
+    color: colors.$link;
+    border-bottom: 1px dotted colors.$link;
     text-decoration: none;
 
     &:hover, &:active {
-      color: $text-color;
-      border-bottom-color: $text-color;
+      color: colors.$text;
+      border-bottom: colors.$text;
     }
   }
 }
 
-// Container styling
-.container {
-  width: calc(100vw - 32px);
-  margin: 0px auto;
-  padding: 16px 0px;
 
-  @media screen and (min-width: $tablet) {
-    width: 640px;
-    padding: 32px 0px;
-  }
-  @media screen and (min-width: $desktop) {
-    width: 768px;
-    padding: 32px 0px;
-  }
-}
-
-// Window styling
-.window {
-  padding: 12px 0px 0px;
-
-  border: 2px $text-color solid;
-  border-image-source: url('/assets/background.png');
-  border-image-slice: 14 38 8 12 fill;
-  border-image-width: 14px 38px 8px 12px;
-  border-image-outset: 0;
-  border-image-repeat: repeat;
-
-  box-shadow: 2px 2px 4px $text-color;
-}
-
-// Footer styling
-.footer {
-  margin-top: 16px;
-
-  font-size: small;
-  text-align: center;
-
-  p {
-    font-weight: 900;
-    color: white;
-    text-shadow: 2px 2px 4px $text-color;
-  }
-}
-
-// Section styling
-.section {
-  padding: 12px;
-}
 
 
 // Content styling
 .content {
   padding: 12px;
 
+  // Remove margin from elements
   :first-child {
     margin-top: 0;
   }
@@ -112,43 +62,26 @@ body {
     margin-bottom: 0;
   }
 
-  // Markup styling
-  .is-bold {
-    font-weight: 900;
+  // Emoji styling
+  .emoji {
+    height: 1em;
+    width: 1em;
+    margin: 0 .05em 0 .1em;
+    vertical-align: -0.1em;
   }
-  .is-small {
-    font-size: small;
-  }
-  .is-centered {
+
+  // Fancy title style
+  .fancy-title {
     text-align: center;
+    color: colors.$shade-3;
+
+    &:before {
+      content: "☙ ";
+    }
+    &:after {
+      content: " ❧";
+    }
   }
-
-  // Colors
-  &.is-darker {
-    background: $light-color;
-  }
-}
-
-
-// Button styling
-a.button {
-  padding: 2px 4px;
-
-  border: none;
-  color: $text-color;
-  font-weight: 700;
-
-  &:hover, &:active {
-    color: $dark-color;
-  }
-}
-
-// Buttons styling
-.buttons {
-  display: flex;
-  gap: 4px;
-  justify-content: center;
-  align-items: center;
 }
 
 // Badges styling
@@ -162,10 +95,10 @@ a.button {
   align-items: center;
 
   & > * {
-    box-shadow: 2px 2px 4px $text-color;
+    @include mixins.box-shadow;
   }
 
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: layout.$tablet) {
     grid-template-columns: 88px 88px 88px 88px 88px;
   }
 
@@ -175,7 +108,15 @@ a.button {
   }
 }
 
+// Box styling
+.box {
+  padding: 8px;
+
+  background-color: colors.$light;
+  @include mixins.border;
+}
+
 // Separator styling
 .separator {
-  border-top: 2px solid $text-color;
+  border-top: 2px solid colors.$shade-4;
 }
